fix get achivement and caculator